--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -196,7 +196,7 @@ header {
 
 /*-------------- FOOTER -----------------*/
 footer {
-    background-color: #fae98e;
+    background-color: #FDFAE9;
 }
 .flex-2 {
     flex-direction: column;
@@ -216,7 +216,7 @@ footer {
     padding: 5rem;
 }
 .my-footer {
-    background-color: #4E2A14;
+    background-color: #6F2601;
     border-radius: 15px;
     padding-inline: 3.2rem;
     padding-block: 2.5rem;
@@ -378,13 +378,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -530,7 +529,7 @@ footer {
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -688,14 +687,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -854,16 +851,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
-        padding: 0;
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
-        width: 200px;
     }
     .title-footer {
         text-align: center;
