--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -21,9 +21,6 @@ ul > li {
 header {
     padding-inline: 2rem;
     padding-block: .5rem;
-    /* top: 0px; */
-    /* position: sticky; */
-    /* z-index: 2; */
     background-color: black;
 }
 
@@ -171,25 +168,41 @@ header {
 /*-------------- PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-color: #D8A03C;
+    background-image: url(../img/inicio-img/Fondo-Producto.jpeg);
+    background-size: 100%;
 }
 .productos section {
-    margin-bottom: 4rem;
+    margin-bottom: 7rem;
 }
 .productos-column-3 {
     grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
-    gap: 2.5rem;
+    gap: 2.61rem;
 }
 .img-producto img {
     width: 120px;
+    height: 300px;
+    filter: drop-shadow(0px 0px 6px #c5c4c4);
     position: relative;
+    top: -5px;
+    transition: all .3s ease-in-out;
 }
 .item-producto {    
-    background-color: #efd15a;
+    background-color: white;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 2.8rem;
+    height: 430px;
+}
+.item-producto:hover {
+    .img-producto img {
+        scale: 1.1;
+    }
+}
+.my-item {
+    position: relative;
+    top: -5rem;
+}
+.gap1-3rem {
     gap: 1.3rem;
-    height: 500px;
 }
 .text-producto {
     font-size: clamp(20px, 3vw, 22px);
@@ -230,16 +243,16 @@ header {
     font-size: clamp(30px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
-    color: #401e08;
+    color: white;
 }
 .text-section {
-    font-size: clamp(10px, 3vw, 20px);
-    color: #401e08;
+    font-size: clamp(17px, 3vw, 20px);
+    color: white;
 }
 
 /*--------------  FOOTER -----------------*/
 footer {
-    background-color: #fae98e;
+    background-color: #FDFAE9;
 }
 .flex-2 {
     flex-direction: column;
@@ -259,7 +272,7 @@ footer {
     padding: 5rem;
 }
 .my-footer {
-    background-color: #4E2A14;
+    background-color: #6F2601;
     border-radius: 15px;
     padding-inline: 3.2rem;
     padding-block: 2.5rem;
@@ -402,13 +415,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #4E2414;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2414;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -527,7 +539,7 @@ footer {
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -645,14 +657,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2414;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -789,6 +799,15 @@ footer {
     .productos section {
         margin-bottom: 3rem;
     }
+    .productos section {
+        margin-bottom: 5.8rem;
+    }
+    .text-section {
+        width: 250px;
+    }
+    .productos-column-3 {
+        gap: 6rem;
+    }
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -801,16 +820,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
-        padding: 0;
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
-        width: 200px;
     }
     .title-footer {
         text-align: center;
