--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -21,9 +21,6 @@ ul > li {
 header {
     padding-inline: 2rem;
     padding-block: .5rem;
-    /* top: 0px; */
-    /* position: sticky; */
-    /* z-index: 2; */
     background-color: black;
 }
 
@@ -154,7 +151,7 @@ header {
 
 /*-------------- FOOTER -----------------*/
 footer {
-    background-color: #fae98e;
+    background-color: #FDFAE9;
 }
 .flex-2 {
     flex-direction: column;
@@ -174,7 +171,7 @@ footer {
     padding: 5rem;
 }
 .my-footer {
-    background-color: #4E2A14;
+    background-color: #6F2601;
     border-radius: 15px;
     padding-inline: 3.2rem;
     padding-block: 2.5rem;
@@ -306,13 +303,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -422,7 +418,7 @@ footer {
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -533,7 +529,6 @@ footer {
     }
     .ser-logo {
         background-color: #fae98e;
-        /*padding: .8rem;*/
         border-radius: 15px;
         height: 170px;
         transition: all .3s ease-in-out;
@@ -558,14 +553,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -679,9 +672,7 @@ footer {
     }
     .ser-logo {
         background-color: #fae98e;
-        /*padding: .8rem;*/
         border-radius: 15px;
-        /*height: 150px;*/
         transition: all .3s ease-in-out;
         border: 1px solid #c4c4c4;
     }
@@ -697,16 +688,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
-        padding: 0;
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
-        width: 200px;
     }
     .title-footer {
         text-align: center;
