--- a/css/css.css
+++ b/css/css.css
@@ -21,9 +21,6 @@ ul > li {
 header {
     padding-inline: 2rem;
     padding-block: .5rem;
-    /* top: 0px; */
-    /* position: sticky; */
-    /* z-index: 2; */
     background-color: black;
 }
 
@@ -39,6 +36,9 @@ header {
 .center {
     display: grid;
     place-content: center;
+}
+.center-align {
+    text-align: center;
 }
 
 /*--------------  HEADER -----------------*/
@@ -79,36 +79,25 @@ header {
 }
 
 /*--------------  BANNER -----------------*/
-.banner {
-    /* height: 600px; */
-    background-color: #D9D9D9;
-}
-/*.banner-img {
-    height: 100%;
-} */
-.banner-img img {
-    background: url(../img/Banner.png) no-repeat;
-    background-size: cover;
+.banner img {
     width: 100%;
-    /* height: 100%; */
-    /* object-fit: cover; */
 }
 
 /*--------------  CATEGORIAS -----------------*/
 .categorias {
     padding-block: 5rem;
-    background: rgb(156,91,12);
-    background: linear-gradient(90deg, rgba(156,91,12,1) 30%, rgba(247,213,77,1) 100%);
-    /* background-color: #f7d54d; */
+    margin-top: -0.3rem;
+    background-color: black;
 }
 .item-img img {
-    /* height: 100%; */
     width: 35rem;
     height: 100%;
+    border-radius: 15px;
 }
 .item-img2 img {
     width: 25rem;
     height: 100%;
+    border-radius: 15px;
 }
 .cat-column-2 {
     grid-template-columns: repeat(2, auto);
@@ -122,10 +111,11 @@ header {
 /*--------------  PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-color: #D8A03C;
+    background-image: url(../img/inicio-img/Fondo-Producto.jpeg);
+    background-size: 100%;
 }
 .productos section {
-    margin-bottom: 4rem;
+    margin-bottom: 7rem;
 }
 .productos-column-3 {
     grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
@@ -133,14 +123,29 @@ header {
 }
 .img-producto img {
     width: 120px;
+    height: 300px;
+    filter: drop-shadow(0px 0px 6px #c5c4c4);
     position: relative;
+    top: -5px;
+    transition: all .3s ease-in-out;
 }
 .item-producto {    
-    background-color: #efd15a;
+    background-color: white;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 2.8rem;
+    height: 430px;
+}
+.item-producto:hover {
+    .img-producto img {
+        scale: 1.1;
+    }
+}
+.my-item {
+    position: relative;
+    top: -5rem;
+}
+.gap1-3rem {
     gap: 1.3rem;
-    height: 500px;
 }
 .text-producto {
     font-size: clamp(20px, 3vw, 22px);
@@ -181,17 +186,17 @@ header {
     font-size: clamp(30px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
-    color: #401e08;
+    color: white;
 }
 .text-section {
-    font-size: clamp(10px, 3vw, 20px);
-    color: #401e08;
+    font-size: clamp(17px, 3vw, 20px);
+    color: white;
 
 }
 
 /*--------------  FOOTER -----------------*/
 footer {
-    background-color: #fae98e;
+    background-color: #FDFAE9;
 }
 .flex-2 {
     flex-direction: column;
@@ -211,7 +216,7 @@ footer {
     padding: 5rem;
 }
 .my-footer {
-    background-color: #4E2A14;
+    background-color: #6F2601;
     border-radius: 15px;
     padding-inline: 3.2rem;
     padding-block: 2.5rem;
@@ -339,7 +344,6 @@ footer {
         gap: 1rem;
     }
     .item-img img {
-        /* height: 100%; */
         width: 30rem;
         height: 100%;
     }
@@ -356,13 +360,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         padding: 0;
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -454,10 +457,9 @@ footer {
     } 
     .cat-column-2 {
         grid-template-columns: repeat(1, auto);
-        gap: 1rem;
+        gap: 1.5rem;
     }
     .item-img img {
-        /* height: 100%; */
         width: 30rem;
         height: 100%;
     }
@@ -488,7 +490,7 @@ footer {
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -583,13 +585,12 @@ footer {
     } 
     .cat-column-2 {
         grid-template-columns: repeat(1, auto);
-        gap: 1rem;
+        gap: 1.5rem;
     }
     .item-img,.item-img2 {
         padding-inline: 3rem;
     }
     .item-img img {
-        /* height: 100%; */
         width: 100%;
         height: 100%;
     }
@@ -617,15 +618,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
+        background-color: #6F2601;
         padding: 0;
-        /* width: 63rem; */
         height: 100%;
+        border-radius: 15px;
     }
     .footer-flex {
-        background-color: #4E2A14;
-        border-radius: 15px;
         padding: 3rem;
     }
     .center-text-footer {
@@ -729,7 +727,6 @@ footer {
         padding-inline: 3rem;
     }
     .item-img img {
-        /* height: 100%; */
         width: 100%;
         height: 100%;
     }
@@ -745,6 +742,15 @@ footer {
     .producto section {
         margin-bottom: 3rem;
     }
+    .productos section {
+        margin-bottom: 5.8rem;
+    }
+    .text-section {
+        width: 250px;
+    }
+    .productos-column-3 {
+        gap: 6rem;
+    }
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -757,16 +763,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
-        border-radius: 0;
-        padding: 0;
         height: 100%;
     }
     .footer-flex {
-        background-color: #4E2A14;
+        background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
-        width: 200px;
     }
     .title-footer {
         text-align: center;
