--- a/css/css.css
+++ b/css/css.css
@@ -111,7 +111,7 @@ header {
 /*--------------  PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-image: url(../img/inicio-img/Fondo-Producto.jpeg);
+    background-image: url(../img/inicio-img/Fondo-Producto.jpg);
     background-size: 100%;
 }
 .productos section {
