--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -37,6 +37,9 @@ header {
     display: grid;
     place-content: center;
 }
+.center-align {
+    text-align: center;
+}
 
 /*--------------  HEADER -----------------*/
 .column-header {
@@ -119,7 +122,7 @@ header {
     background-color: black;
     color: white;
     text-transform: uppercase;
-    font-size: clamp(10px, 3vw, 14px);
+    font-size: clamp(12px, 3vw, 14px);
     border-radius: .2rem;
     transition: all .3s ease-in-out;
     cursor: pointer;
@@ -240,7 +243,7 @@ header {
     background-color: #c97c16;
 }
 .title-section {
-    font-size: clamp(30px, 3vw, 40px);
+    font-size: clamp(25px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
     color: white;
@@ -271,13 +274,6 @@ footer {
 .footer {
     padding: 5rem;
 }
-.my-footer {
-    background-color: #6F2601;
-    border-radius: 15px;
-    padding-inline: 3.2rem;
-    padding-block: 2.5rem;
-    height: 100%;
-}
 .title-footer {
     font-size: clamp(22px, 3vw, 30px);
     color: white;
@@ -296,7 +292,7 @@ footer {
     gap: 4rem;
 }
 .button-footer button {
-    font-size: clamp(10px, 3vw, 20px);
+    font-size: clamp(15px, 3vw, 20px);
     background-color: #f4e493;
     color: #401e08;
     padding-block: .8rem;
@@ -325,10 +321,6 @@ footer {
 .footer-column-3 {
     grid-template-columns: repeat(3, auto);
     gap: 8rem;
-}
-.my-footer2 {
-    padding-top: 12rem;
-    padding-inline: 3.6rem;
 }
 .fa-phone, .fa-envelope {
     font-size: clamp(27px, 3vw, 30px);
@@ -394,6 +386,18 @@ footer {
     .ver-producto article {
         width: 980px;
     }
+
+    .my-footer {
+        background-color: #6F2601;
+        border-radius: 15px;
+        padding-inline: 3.2rem;
+        padding-block: 2.5rem;
+        height: 100%;
+    }
+    .my-footer2 {
+        padding-top: 12rem;
+        padding-inline: 3.6rem;
+    }
 }
 @media (850px < width < 1012px) {
     /*-------------- VER PRODUCTO --------------*/ 
@@ -405,6 +409,24 @@ footer {
     }
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
+    }
+
+    /*-------------- PRODUCTOS --------------*/
+    .productos {
+        padding-block: 3rem;
+    }
+    .productos section {
+        margin-bottom: 3rem;
+    }
+    .img-producto img {
+        width: 100px;
+        height: 250px;
+    }
+    .item-producto {
+        width: 200px;
+        height: 380px;
+        padding: 2rem;
+        margin-top: 3rem;
     }
 
     /*-------------- FOOTER --------------*/ 
@@ -508,12 +530,6 @@ footer {
     }
 
     /*-------------- VER PRODUCTO --------------*/
-    .productos {
-        padding-block: 3rem;
-    } 
-    .productos section {
-        margin-bottom: 3rem;
-    }
     .ver-producto {
         padding-inline: 5rem;
     }
@@ -522,6 +538,24 @@ footer {
     }
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
+    }
+
+    /*-------------- PRODUCTOS --------------*/
+    .productos {
+        padding-block: 3rem;
+    } 
+    .productos section {
+        margin-bottom: 3rem;
+    }
+    .img-producto img {
+        width: 100px;
+        height: 250px;
+    }
+    .item-producto {
+        width: 200px;
+        height: 380px;
+        padding: 2rem;
+        margin-top: 3rem;
     }
 
 
@@ -533,7 +567,6 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
         border-radius: 0;
         padding: 0;
         height: 100%;
@@ -646,6 +679,17 @@ footer {
         gap: 1rem;
     }
 
+     /*-------------- PRODUCTOS --------------*/ 
+     .productos {
+        padding-block: 3rem;
+    } 
+    .productos section {
+        margin-bottom: 5.5rem;
+    }
+    .productos-column-3 {
+        gap: 5.4rem;
+    }
+
     /*-------------- FOOTER --------------*/ 
     .footer {
         padding: 3rem;
@@ -657,13 +701,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #6F2601;
-        padding: 0;
         height: 100%;
-        border-radius: 15px;
     }
     .footer-flex {
+        background-color: #6F2601;
         padding: 3rem;
+        border-radius: 15px;
     }
     .center-text-footer {
         text-align: center;
@@ -754,12 +797,6 @@ footer {
     }
 
     /*-------------- VER PRODUCTO --------------*/
-    .productos {
-        padding-block: 3rem;
-    } 
-    .productos section {
-        margin-bottom: 3rem;
-    } 
     .ver-producto {
         padding-inline: 3rem;
     }
@@ -771,26 +808,32 @@ footer {
         gap: 1rem;
     }
 
-    /*-------------- CATEGORIAS --------------*/ 
-    .categorias {
+    /*-------------- PRODUCTOS --------------*/
+    .productos {
         padding-block: 3rem;
     } 
-    .cat-column-2 {
-        grid-template-columns: repeat(1, auto);
-        gap: 1rem;
+    .productos section {
+        margin-bottom: 6rem;
     }
-    .item-img, .item-img2 {
-        padding-inline: 3rem;
+    .text-section {
+        width: 250px;
     }
-    .item-img img {
-        /* height: 100%; */
-        width: 100%;
-        height: 100%;
+    .productos-column-3 {
+        gap: 6.2rem;
     }
-    .item-img2 img {
-        width: 100%;
-        height: 100%;
+    .img-producto img {
+        width: 100px;
+        height: 250px;
     }
+    .item-producto {
+        width: 190px;
+        height: 370px;
+        padding: 1.3rem;
+    }
+    .button-producto button {
+        padding: 1rem 1.5rem;
+    }
+
 
     /*-------------- PRODUCTOS --------------*/ 
     .productos {
@@ -800,13 +843,25 @@ footer {
         margin-bottom: 3rem;
     }
     .productos section {
-        margin-bottom: 5.8rem;
+        margin-bottom: 6rem;
     }
     .text-section {
         width: 250px;
     }
     .productos-column-3 {
-        gap: 6rem;
+        gap: 5.4rem;
+    }
+    .item-producto {
+        width: 220px;
+        height: 415px;
+    }
+    .item-producto {
+        width: 190px;
+        height: 370px;
+        padding: 1.3rem;
+    }
+    .button-producto button {
+        padding: 1rem 1.5rem;
     }
 
     /*-------------- FOOTER --------------*/ 
@@ -826,6 +881,7 @@ footer {
         background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
+        width: 230px;
     }
     .title-footer {
         text-align: center;
@@ -849,7 +905,156 @@ footer {
     }
     .my-footer2 {
         flex-direction: column-reverse;
+        padding-top: 2rem;
+        padding-inline: 1rem;
+    }
+}
+
+@media (max-width: 350px) {
+    /*-------------- HEADER --------------*/ 
+    header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+        padding-inline: 1rem;
+    }
+    .title-logo img {
+        width: 10rem;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 10rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    /*-------------- VER PRODUCTO --------------*/
+    .producto-img {
+        padding: 3rem;
+    }
+    .ver-producto-2 {
+        padding-block: 1.5rem;
+        padding-inline: 0;
+        gap: 2rem;
+    }
+
+    /*-------------- PRODUCTOS --------------*/ 
+    .productos {
+        padding-block: 3rem;
+    } 
+    .producto section {
+        margin-bottom: 3rem;
+    }
+    .productos section {
+        margin-bottom: 6rem;
+    }
+    .text-section {
+        width: 250px;
+    }
+    .productos-column-3 {
+        gap: 6.2rem;
+    }
+    .img-producto img {
+        width: 100px;
+        height: 250px;
+    }
+    .item-producto {
+        width: 190px;
+        height: 370px;
+        padding: 1.3rem;
+    }
+    .button-producto button {
+        padding: 1rem 1.5rem;
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer {
+        padding: 3rem;
+    }
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #6F2601;
+        border-radius: 15px;
+        padding: 3rem;
+        width: 180px;
+    }
+    .title-footer {
+        text-align: center;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 1rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
         padding-top: 4rem;
-        padding-inline: 3.6rem;
+        padding-inline: 1rem;
     }
 }
