--- a/css/productos_css.css
+++ b/css/productos_css.css
@@ -111,7 +111,7 @@ header {
 }
 .producto-info div > p {
     text-transform: uppercase;
-    font-size: clamp(19px, 3vw, 35px);
+    font-size: clamp(25px, 3vw, 35px);
     font-weight: bold;
 }
 .producto-info div > button {
@@ -122,7 +122,7 @@ header {
     padding-block: 1rem;
     padding-inline: 2rem;
     border-radius: 2rem;
-    font-size: clamp(8px, 3vw, 14px);
+    font-size: clamp(12px, 3vw, 14px);
     transition: all .3s ease-in-out;
 }
 .producto-info div > button:hover {
@@ -150,13 +150,6 @@ footer {
 .footer {
     padding: 5rem;
 }
-.my-footer {
-    background-color: #6F2601;
-    border-radius: 15px;
-    padding-inline: 3.2rem;
-    padding-block: 2.5rem;
-    height: 100%;
-}
 .title-footer {
     font-size: clamp(22px, 3vw, 30px);
     color: white;
@@ -175,7 +168,7 @@ footer {
     gap: 4rem;
 }
 .button-footer button {
-    font-size: clamp(10px, 3vw, 20px);
+    font-size: clamp(15px, 3vw, 20px);
     background-color: #f4e493;
     color: #401e08;
     padding-block: .8rem;
@@ -204,10 +197,6 @@ footer {
 .footer-column-3 {
     grid-template-columns: repeat(3, auto);
     gap: 8rem;
-}
-.my-footer2 {
-    padding-top: 12rem;
-    padding-inline: 3.6rem;
 }
 .fa-phone, .fa-envelope {
     font-size: clamp(27px, 3vw, 30px);
@@ -269,6 +258,20 @@ footer {
     color: #fdfbed;
 }
 
+@media (min-width: 1013px) {
+    .my-footer {
+        background-color: #6F2601;
+        border-radius: 15px;
+        padding-inline: 3.2rem;
+        padding-block: 2.5rem;
+        height: 100%;
+    }
+
+    .my-footer2 {
+        padding-top: 12rem;
+        padding-inline: 3.6rem;
+    }
+} 
 @media (850px < width < 1012px) {
     /*-------------- PRODUCTO --------------*/ 
     .productos {
@@ -419,7 +422,6 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #fae98e;
         border-radius: 0;
         padding: 0;
         height: 100%;
@@ -555,13 +557,12 @@ footer {
         display: none;
     }
     .my-footer {
-        background-color: #6F2601;
-        padding: 0;
         height: 100%;
-        border-radius: 15px;
     }
     .footer-flex {
+        background-color: #6F2601;
         padding: 3rem;
+        border-radius: 15px;
     }
     .center-text-footer {
         text-align: center;
@@ -673,6 +674,7 @@ footer {
         background-color: #6F2601;
         border-radius: 15px;
         padding: 3rem;
+        width: 230px;
     }
     .title-footer {
         text-align: center;
@@ -696,7 +698,122 @@ footer {
     }
     .my-footer2 {
         flex-direction: column-reverse;
+        padding-top: 2rem;
+        padding-inline: 1rem;
+    }
+}
+
+@media (max-width: 350px) {
+    /*-------------- HEADER --------------*/ 
+    header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+        padding-inline: 1rem;
+    }
+    .title-logo img {
+        width: 10rem;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 10rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    /*-------------- PRODUCTOS ------------*/
+    .producto-info {
+        margin-top: 2.4rem;
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer {
+        padding: 3rem;
+    }
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #6F2601;
+        border-radius: 15px;
+        padding: 3rem;
+        width: 180px;
+    }
+    .title-footer {
+        text-align: center;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 1rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
         padding-top: 4rem;
-        padding-inline: 3.6rem;
+        padding-inline: 1rem;
     }
 }
