--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -124,7 +124,7 @@ header {
     width: 100%;
     border-radius: 15px;
     height: 200px;
-    object-fit: cover;
+    object-fit: fill;
 }
 .ser-title {
     color: #401e08; 
@@ -540,7 +540,7 @@ footer {
         width: 100%;
         border-radius: 15px;
         height: 170px;
-        object-fit: cover;
+        object-fit: fill;
     }
     
 
